--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     const memory = process.memoryUsage().heapUsed
     
     const p = document.getElementById('text')
-    p.innerHTML = memory
+    p.innerHTML = "lorem ipsum dolor"
     </script>
 </body>
 </html>
